calculate simple math action and show it in textbox

--- a/calculator.html
+++ b/calculator.html
@@ -14,28 +14,29 @@
         </div>
         <div>
             <div>
-                <button type="button" id="btn-ac" class="arithmetic" >AC</button>
-                <button type="button" id="btn-abs" class="arithmetic">+/-</button>
-                <button type="button" id="btn-prec" class="arithmetic">%</button>
-                <button type="button" id="btn-divide" class="arithmetic">&divide;</button>
+                <button type="button" class="arithmetic">AC</button>
+                <button type="button" class="arithmetic">%</button>
+                <button type="button" class="arithmetic">&divide;</button>
+                <button type="button" class="arithmetic">x</button>
             </div>
             <div>
                 <button type="button" class="number">7</button>
                 <button type="button" class="number">8</button>
                 <button type="button" class="number">9</button>
-                <button type="button" id="btn-multi" class="arithmetic">X</button>
+                <button type="button" class="arithmetic">-</button>
             </div>
             <div>
                 <button type="button" class="number">6</button>
                 <button type="button" class="number">5</button>
                 <button type="button" class="number">4</button>
-                <button type="button" id="btn-sub" class="arithmetic">-</button>
+                <button type="button" class="arithmetic">+</button>
             </div>
             <div>
                 <button type="button" class="number">3</button>
                 <button type="button" class="number">2</button>
                 <button type="button" class="number">1</button>
-                <button type="button" class="arithmetic">+</button>
+                <button id="btnEqual">=</button>
+
             </div>
         </div>
     </div>
