simple math function with no chaining

--- a/calculator.html
+++ b/calculator.html
@@ -7,14 +7,14 @@
     <script type="text/javascript" src="js/calc.js"></script>
 
 </head>
-<body> 
+<body>
     <div>
         <div>
             <input type="text" class="results-text" disabled="disabled" />
         </div>
         <div>
             <div>
-                <button type="button" class="arithmetic">AC</button>
+                <button id="btnReset" type="button">AC</button>
                 <button type="button" class="arithmetic">%</button>
                 <button type="button" class="arithmetic">&divide;</button>
                 <button type="button" class="arithmetic">x</button>
@@ -36,7 +36,10 @@
                 <button type="button" class="number">2</button>
                 <button type="button" class="number">1</button>
                 <button id="btnEqual">=</button>
-
+            </div>
+            <div>
+                <button type="button" class="number">0</button>
+                <button type="button" class="number">.</button>
             </div>
         </div>
     </div>
