decmial point and css fix

--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <div>
+    <div class="calculator">
         <div>
             <input type="text" class="results-text" disabled="disabled" />
         </div>
@@ -38,7 +38,7 @@
                 <button id="btnEqual">=</button>
             </div>
             <div>
-                <button type="button" class="number">0</button>
+                <button type="button" class="number zero-number">0</button>
                 <button type="button" class="number">.</button>
             </div>
         </div>
