--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="calculator">
-        <div>
+        <div class="div-results">
             <input type="text" class="results-text" disabled="disabled" />
         </div>
         <div>
