--- a/calculator.html
+++ b/calculator.html
@@ -1,12 +1,14 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <link rel="stylesheet" href="css/calc.css" />
     <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
     <script type="text/javascript" src="js/calc.js"></script>
 
 </head>
+
 <body>
     <div class="calculator">
         <div class="div-results">
@@ -15,7 +17,7 @@
         <div>
             <div>
                 <button id="btnReset" type="button">AC</button>
-                <button type="button" class="arithmetic">%</button>
+                <button id="btnOps" type="button">+/-</button>
                 <button type="button" class="arithmetic">&divide;</button>
                 <button type="button" class="arithmetic">x</button>
             </div>
@@ -38,10 +40,11 @@
                 <button type="button" class="number">.</button>
             </div>
             <div>
-                <button type="button" class="number zero-number">0</button>                
+                <button type="button" class="number zero-number">0</button>
                 <button id="btnEqual">=</button>
             </div>
         </div>
     </div>
 </body>
+
 </html>
